--- a/index.html
+++ b/index.html
@@ -8,10 +8,13 @@
 	<link rel="preconnect" href="https://fonts.googleapis.com">
 	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 	<link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@200;300;500;600&display=swap" rel="stylesheet">
+	<script type="module" src="/JavaScript/search.js"></script>
 </head>
 <body>
+	<input class="search-bar" type="text">
 	<header class="header">
-		<p>SÖK TEAM</p>
+		<p class="search-btn">SÖK TEAM</p>
+	
 		<div class="pokeboll">
 			<p></p>
 		</div>
