Laggt in css och stylat

--- a/index.html
+++ b/index.html
@@ -27,6 +27,9 @@
 		<section class="display-my-poke">
 			<h4>ACTIVE TEAM</h4>
 		</section>
+		<section class="display-my-reseve-poke">
+			<h4>RESERVER</h4>
+		</section>
 	</main>
 </body>
 </html>
