Gjort om ajaxfilen till hämtning av data, laggt in i sök och i team vyerna, gjort så listan ej får dubletter.

--- a/index.html
+++ b/index.html
@@ -24,11 +24,11 @@
 	</header>
 	<main>
 		<section class="display-poke"></section>
+		<h4 class="h-team">ACTIVE TEAM</h4>
 		<section class="display-my-poke">
-			<h4>ACTIVE TEAM</h4>
 		</section>
+		<h4 class="h-team-reserve">RESERVER</h4>
 		<section class="display-my-reseve-poke">
-			<h4>RESERVER</h4>
 		</section>
 	</main>
 </body>
