Laggt in så man kan ändra ordningen i sitt team, dock fortfarande buggigt. Laggt till lite styling

--- a/index.html
+++ b/index.html
@@ -16,10 +16,8 @@
 	<input class="search-bar" type="text">
 	<header class="header">
 		<p class="search-btn">SÖK TEAM</p>
+		<img src="https://purepng.com/public/uploads/thumbnail/purepng.com-pokeballpokeballdevicepokemon-ballpokemon-capture-ball-1701527825716sd1wq.png" class="pokeboll-img">
 	
-		<div class="pokeboll">
-			<p></p>
-		</div>
 		<p class="my-team">MITT TEAM</p>
 	</header>
 	<main>
@@ -30,6 +28,11 @@
 		<h4 class="h-team-reserve">RESERVER</h4>
 		<section class="display-my-reseve-poke">
 		</section>
+		<!-- <section class="welcome-section">
+			<h1>Välkommen till</h1>
+			<h3>Pokemon Team Manager!</h3>
+		</section> -->
+
 	</main>
 </body>
 </html>
