fixat så att kicka fungerar korrekt, stylat och andra buggfix

--- a/index.html
+++ b/index.html
@@ -10,7 +10,10 @@
 	<link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@200;300;500;600&display=swap" rel="stylesheet">
 	<link rel="preconnect" href="https://fonts.googleapis.com">
 	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-	<link href="https://fonts.googleapis.com/css2?family=Luckiest+Guy&display=swap" rel="stylesheet">
+	<link href="https://fonts.googleapis.com/css2?family=Luckiest+Guy&display=swap" 
+	<link rel="preconnect" href="https://fonts.googleapis.com">
+	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+	<link href="https://fonts.googleapis.com/css2?family=Rubik+Mono+One&display=swap" rel="stylesheet">
 	<link rel="stylesheet" href="/CSS/pokemonlista.css">
 	<link rel="stylesheet" href="/CSS/myteam.css">
 	<script type="module" src="/JavaScript/search.js"></script>
@@ -28,6 +31,7 @@
 		<section class="display-poke"></section>
 		<h4 class="h-team">ACTIVE TEAM</h4>
 		<section class="display-my-poke">
+
 		</section>
 		<h4 class="h-team-reserve">RESERVER</h4>
 		<section class="display-my-reseve-poke">
