Gjort så man kan söka på typer, laggt in start på pokebollen och slipat på designen

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 	<script type="module" src="/JavaScript/search.js"></script>
 </head>
 <body>
-	<input class="search-bar" type="text">
+	<input class="search-bar" type="text" placeholder="Sök pokemon/typer">
 	<header class="header">
 		<p class="search-btn">SÖK TEAM</p>
 		<img src="https://purepng.com/public/uploads/thumbnail/purepng.com-pokeballpokeballdevicepokemon-ballpokemon-capture-ball-1701527825716sd1wq.png" class="pokeboll-img">
@@ -28,6 +28,7 @@
 	</header>
 	<main>
 		<div class="how-many-in-team"></div>
+		<h3 class="h-creator">Några tipps från skaparen: </h3>
 		<section class="display-poke"></section>
 		<h4 class="h-team">ACTIVE TEAM</h4>
 		<section class="display-my-poke">
