fixat i css och bugg i ändra ordning

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>Pokemon team manager</title>
-	<link rel="stylesheet" href="/CSS/style.css">
+	<link rel="stylesheet" href="./CSS/style.css">
 	<link rel="preconnect" href="https://fonts.googleapis.com">
 	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 	<link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@200;300;500;600&display=swap" rel="stylesheet">
@@ -14,9 +14,9 @@
 	<link rel="preconnect" href="https://fonts.googleapis.com">
 	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 	<link href="https://fonts.googleapis.com/css2?family=Rubik+Mono+One&display=swap" rel="stylesheet">
-	<link rel="stylesheet" href="/CSS/pokemonlista.css">
-	<link rel="stylesheet" href="/CSS/myteam.css">
-	<script type="module" src="/JavaScript/search.js"></script>
+	<link rel="stylesheet" href="./CSS/pokemonlista.css">
+	<link rel="stylesheet" href="./CSS/myteam.css">
+	<script type="module" src="./JavaScript/search.js"></script>
 </head>
 <body>
 	<input class="search-bar" type="text" placeholder="Sök pokemon/typer">
