bakgrund annorlunda länkad

--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>Pokemon team manager</title>
+	<link rel="icon" type="image/x-icon" href="">
 	<link rel="stylesheet" href="./CSS/style.css">
 	<link rel="preconnect" href="https://fonts.googleapis.com">
 	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -16,7 +17,8 @@
 	<link href="https://fonts.googleapis.com/css2?family=Rubik+Mono+One&display=swap" rel="stylesheet">
 	<link rel="stylesheet" href="./CSS/pokemonlista.css">
 	<link rel="stylesheet" href="./CSS/myteam.css">
-	<script type="module" src="./JavaScript/search.js"></script>
+	<script type="module" src="../JavaScript/search.js"></script>
+	<link rel="icon" type="image/x-icon" href="">
 </head>
 <body>
 	<input class="search-bar" type="text" placeholder="Sök pokemon/typer">
