--- a/index.html
+++ b/index.html
@@ -17,8 +17,8 @@
 	<link href="https://fonts.googleapis.com/css2?family=Rubik+Mono+One&display=swap" rel="stylesheet">
 	<link rel="stylesheet" href="./CSS/pokemonlista.css">
 	<link rel="stylesheet" href="./CSS/myteam.css">
-	<script type="module" src="../JavaScript/search.js"></script>
-	<link rel="icon" type="image/x-icon" href="">
+	<script type="module" src=".../JavaScript/search.js"></script>
+	
 </head>
 <body>
 	<input class="search-bar" type="text" placeholder="Sök pokemon/typer">
