--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 	<link href="https://fonts.googleapis.com/css2?family=Rubik+Mono+One&display=swap" rel="stylesheet">
 	<link rel="stylesheet" href="./CSS/pokemonlista.css">
 	<link rel="stylesheet" href="./CSS/myteam.css">
-	<script type="module" src=".../JavaScript/search.js"></script>
+	<script type="module" src="./JavaScript/search.js"></script>
 	
 </head>
 <body>
