ändrat färg på favicon och fixat lite bugg i stilen.

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 	
 </head>
 <body>
-	<input class="search-bar" type="text" placeholder="Sök pokemon/typer">
+	<input id="prevent" class="search-bar" type="text" placeholder="Sök pokemon/typer">
 	<header class="header">
 		<p class="search-btn">SÖK TEAM</p>
 		<img src="https://purepng.com/public/uploads/thumbnail/purepng.com-pokeballpokeballdevicepokemon-ballpokemon-capture-ball-1701527825716sd1wq.png" class="pokeboll-img">
