--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 	</header>
 	<main>
 		<div class="how-many-in-team"></div>
-		<h3 class="h-creator">Några tipps från skaparen: </h3>
+		<h3 class="h-creator">Några tips från skaparen: </h3>
 		<section class="display-poke"></section>
 		<h4 class="h-team">ACTIVE TEAM</h4>
 		<section class="display-my-poke">
